crates/strider/tests/snapshots/arm__complex__multi_arg_call_in_branch.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0x604:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "5" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "11" -> "5" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "12" -> "5" [color="#ff8800", label=arg5, fontcolor="#cccccc", fontsize=9];
  "13" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "5" -> "13" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "5" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "14" -> "13" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "v15" [label="Post Call\nr1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v15" [color="#888888", style=dashed];
  "v15" -> "13" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "v16" [label="Post Call\nd0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v16" [color="#888888", style=dashed];
  "v16" -> "13" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "v17" [label="Post Call\nd1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v17" [color="#888888", style=dashed];
  "v17" -> "13" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "14" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "v18" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v18" [color="#888888", style=dashed];
  "v18" -> "14" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "19" -> "14" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "12" [label="init\nlr", shape=Mdiamond, fillcolor="#1a3a5c"];
  "11" [label="init\nr4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="arg[3] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="arg[2] ← r2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="arg[1] ← r1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "20" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v21" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v21" -> "6" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "11" -> "6" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "20" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "22" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v23" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v23" -> "20" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "12" -> "20" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "22" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "24" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "24" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "24" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "25" -> "24" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "25" [label="const 0x604:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "10" -> "24" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "24" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "8" -> "24" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "10" -> "24" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "11" -> "24" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "12" -> "24" [color="#ff8800", label=arg5, fontcolor="#cccccc", fontsize=9];
  "26" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "24" -> "26" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "24" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" -> "26" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "v28" [label="Post Call\nr1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "24" -> "v28" [color="#888888", style=dashed];
  "v28" -> "26" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "v29" [label="Post Call\nd0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "24" -> "v29" [color="#888888", style=dashed];
  "v29" -> "26" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "v30" [label="Post Call\nd1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "24" -> "v30" [color="#888888", style=dashed];
  "v30" -> "26" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "27" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "v31" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "24" -> "v31" [color="#888888", style=dashed];
  "v31" -> "27" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "32" -> "27" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "32" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "33" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "34" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "34" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "33" [label="arg[0] ← r0", shape=Mdiamond, fillcolor="#1a3a5c"];
}
